# q2-composition

./: .copier-answers.yml  .gitignore  Makefile  pyproject.toml
ci/: pip_requirements.txt
ci/recipe/: meta.yaml
conda-recipe/: meta.yaml
q2_composition/: __init__.py  _ancom.py  _ancombc.py  _ancombc2.py  _diff_abundance_plots.py  _examples.py  _format.py  _impute.py  _transformer.py  _type.py  citations.bib  plugin_setup.py
q2_composition/_dataloaf_tabulate/: __init__.py  _visualizer.py
q2_composition/tests/: test_ancom.py  test_ancombc.py  test_ancombc2.py  test_diff_abundance_plot.py  test_impute.py  test_plugin_setup.py  test_tabulate.py  test_transformer.py
q2_composition/tests/data/ancombc2/: feature-table.biom  metadata.tsv  r-model-statistics.tsv  r-structural-zeros.tsv
