[project]
name = "q2-composition"
authors = [
    { name = "Jamie Morton", email = "jamietmorton@gmail.com" }
]
description = "Compositional statistics plugin for QIIME2."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://qiime2.org"
Repository = "https://github.com/qiime2/q2-composition"

[project.entry-points.'qiime2.plugins']
"q2-composition" = "q2_composition.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_composition/_version.py"

[tool.setuptools]
include-package-data = true
script-files = [
    "q2_composition/assets/run_ancombc.R"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_composition*"]

[tool.setuptools.package-data]
q2_composition = ["**/*"]
